--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cafeteria || Habilidades</title>
+  <title>Cafeteria || Contato</title>
   <!-- font-awesome -->
   <link rel="stylesheet" href="assets/fontawesome-free-6.1.1-web/css/all.min.css">
   <!-- css -->
